--- a/moduler/MockNew.html
+++ b/moduler/MockNew.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!--bootstrap toggle cdn-->
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+  <link rel="stylesheet" href="cssSidebar.css">
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
 
@@ -17,7 +22,8 @@
     /* Set gray background color and 100% height */
 
     .sidenav {
-      background-color: #f1f1f1;
+      background-color: white;
+      border-right-color: red;
       height: 100%;
     }
     /* Set black background color, white text and some padding */
@@ -43,7 +49,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default" id="navbarCustom">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -52,13 +58,16 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
       </button>
-        <a class="navbar-brand" href="#">Alpha-Solutions</a>
+
+        <a class="navbar-brand" href="#">
+        <img id="logo" alt="Brand" src="alpha-logo.png">
+      </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Link</a></li>
@@ -76,7 +85,7 @@
           </li>
         </ul>
         <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">Mia Ryvard</a></p>
-      </div>
+      </div> -->
       <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
@@ -86,57 +95,39 @@
     <div class="row content">
       <!--Side bar-->
       <div class="col-sm-3 sidenav">
-
-        <div class="row">
-
-          <img src="./pics/alpha-logo.png">
-
-        </div>
-
+        <br><br>
         <div class="row space-2">
-
-          <button id="addTime" class="btn btn-sidebar btn-primary glyphicon">+</button>
-
+          <button id="addTime" class="btn btn-sidebar btn-primary glyphicon" data-toggle="collapse" data-target="#collapse_custom">+</button>
         </div>
-
+        <br>
         <div class="row space">
-
-          <button class="btn btn-primary btn-sidebar">Favorit</button>
-
+          <button class="btn btn-default btn-sidebar"><span class="glyphicon glyphicon-star pull-right" aria-hidden="true"></span>Ferie</button>
         </div>
-
         <div class="row space">
-
-          <button class="btn btn-primary btn-sidebar">Favorit</button>
-
+          <button class="btn btn-default btn-sidebar"><span class="glyphicon glyphicon-star pull-right" aria-hidden="true"></span>Frokost</button>
         </div>
-
         <div class="row space">
-
-          <button class="btn btn-primary btn-sidebar">Favorit</button>
-
+          <button class="btn btn-default btn-sidebar"><span class="glyphicon glyphicon-star pull-right" aria-hidden="true"></span>Playstation</button>
         </div>
-
         <div class="row space dropdown">
-
           <center><input id="templateSearch" type="search" class="dropdown-toggle form-control btn-sidebar" data-toggle="dropdown"
-              placeholder="Template">
-
+              placeholder="Søg: templates">
             <ul class="dropdown-menu">
+              <li><a href="#">Projekt X<span class="glyphicon glyphicon-star-empty pull-right" aria-hidden="true"></span></a></li>
+              <li><a href="#">Ferie<span class="glyphicon glyphicon-star pull-right" aria-hidden="true"></a></li>
+              <li><a href="#">JavaScript<span class="glyphicon glyphicon-star-empty pull-right" aria-hidden="true"></a></li>
+              <li><a href="#">CSS<span class="glyphicon glyphicon-star-empty pull-right" aria-hidden="true"></a></li>
+              <li><a href="#">Frokost<span class="glyphicon glyphicon-star pull-right" aria-hidden="true"></a></li>
+              <li><a href="#">Playstation<span class="glyphicon glyphicon-star pull-right" aria-hidden="true"></a></li>
 
-              <li><a href="#">HTML<span class="pull-right">☆</span></a></li>
-
-              <li><a href="#">CSS<span class="pull-right">☆</span></a></li>
-
-              <li><a href="#">JavaScript<span class="pull-right">☆</span></a></li>
 
             </ul>
-
           </center>
-
         </div>
 
-        <br>
+
+        <!--bar2-->
+        <!-- <br>
         <row>
           <button class="btn btn-primary btn-block btn-lg"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
         </row>
@@ -145,11 +136,14 @@
           <button class="btn btn-default btn-block btn-xs"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Ferie</button>
           <button class="btn btn-default btn-block btn-xs"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Frokost</button>
           <button class="btn btn-default btn-block btn-xs"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Favorit x</button>
-        </row>
+        </row> -->
 
       </div>
 
       <div class="col-sm-9">
+
+
+
 
         <div class="row">
           <div class="col-xs-4">
@@ -177,7 +171,7 @@
           <!--Table-->
           <table class="table table-responsive">
             <thead>
-              <tr class="table-bordered">
+              <tr class=" ">
 
                 <div class="btn-group">
                   <th><button type="button" class="btn btn-default btn-block active"><strong>Mandag</strong><br>04:00</button></th>
@@ -194,6 +188,133 @@
               </tr>
             </thead>
             <tbody class="table-bordered">
+              <!--  Form : Collapse row -->
+              <tr>
+                <td colspan="7" id="td_collapse">
+
+                  <div id="collapse_custom" class="collapse pull-center">
+                    <!--form her-->
+                    <form>
+                      <!-- 1st row -->
+                      <div class="row form-group">
+                        <div class="col-sm-2">
+                          <input type="search" class="form-control" placeholder="IssueID">
+                        </div>
+
+                        <!--Kunde-->
+                        <div class="col-sm-4">
+                          <div class="form-group dropdown">
+                            <input type="search" class="form-control dropdown-toggle" data-toggle="dropdown" placeholder="Kunde">
+                            <ul class="dropdown-menu">
+                              <li><strong>Recent...</strong></li>
+                              <li><a href="#">Alpha-Solutions</a></li>
+                              <li><a href="#">Netto</a></li>
+                              <li><strong>Efter navn...</strong></li>
+                              <li><a href="#">Alpha-Solutions</a></li>
+                              <li><a href="#">Bilka</a></li>
+                              <li><a href="#">Netto</a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <!--Projekt-->
+                        <div class="col-sm-6">
+                          <div class="form-group dropdown">
+                            <input type="search" class="form-control dropdown-toggle" data-toggle="dropdown" placeholder="Projekt">
+                            <ul class="dropdown-menu">
+                              <li><strong>Recent...</strong></li>
+                              <li><a href="#">Tidsregistrering</a></li>
+                              <li><a href="#">Webshop</a></li>
+                              <li><strong>Efter navn...</strong></li>
+                              <li><a href="#">Tidsregistrering</a></li>
+                              <li><a href="#">Webshop</a></li>
+                            </ul>
+                          </div>
+                        </div>
+
+                      </div>
+                      <!-- 2nd row -->
+                      <div class="row form-group">
+                        <!--Navn-->
+                        <div class="col-sm-6">
+                          <div class="form-group dropdown">
+                            <input type="search" class="form-control dropdown-toggle" data-toggle="dropdown" placeholder="Navn">
+                            <ul class="dropdown-menu">
+                              <li><strong>Recent...</strong></li>
+                              <li><a href="#">Jonas Machon</a></li>
+                              <li><a href="#">Emma Blomsterberg</a></li>
+                              <li><strong>Efter navn...</strong></li>
+                              <li><a href="#">Lasse Wenger</a></li>
+                              <li><a href="#">Mia Ryvard</a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="col-sm-3">
+                          <input type="time" class="form-control">
+                        </div>
+                        <div class="col-sm-3">
+                          <input type="time" class="form-control">
+                        </div>
+                      </div>
+                      <hr>
+                      <!-- 3rd row -->
+                      <div class="row form-group">
+                        <div class="col-sm-6">
+                          <div class="form-group dropdown">
+                            <input type="text" class="form-control dropdown-toggle" data-toggle="dropdown" placeholder="Labels">
+                            <ul class="dropdown-menu">
+                              <li><strong>Recent...</strong></li>
+                              <li><a href="#"><label class="label label-primary"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> label 1</label></a></li>
+                              <li><a href="#"><label class="label label-primary"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> label 1</label></a></li>
+                              <li><strong>Efter navn...</strong></li>
+                              <li><a href="#"><label class="label label-primary"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> label 1</label></a></li>
+                              <li><a href="#"><label class="label label-primary"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> label 1</label></a></li>
+                              <li><a href="#"><label class="label label-primary"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> label 1</label></a></li>
+                            </ul>
+                          </div>
+                        </div>
+
+
+                        <!--label-->
+                        <div class="col-sm-3">
+                          <div class="form-group dropdown">
+                            <input type="search" class="form-control dropdown-toggle" data-toggle="dropdown" placeholder="Task">
+                            <ul class="dropdown-menu">
+                              <li><strong>Recent...</strong></li>
+                              <li><a href="#">Programmering</a></li>
+                              <li><a href="#">Front-end</a></li>
+                              <li><strong>Efter navn...</strong></li>
+                              <li><a href="#">Back-end</a></li>
+                              <li><a href="#">Design</a></li>
+                              <li><a href="#">Planlægning</a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="col-sm-3">
+                          <input type="checkbox" id="toggle-two" checked>
+                        </div>
+                      </div>
+                      <!-- 4rh row -->
+                      <div class="row form-group">
+                        <div class="col-sm-6">
+                          <label>Ekstern kommentar</label>
+                          <textarea class="form-control"></textarea>
+                        </div>
+                        <div class="col-sm-6">
+                          <label>Intern kommentar</label>
+                          <textarea class="form-control"></textarea>
+                        </div>
+                      </div>
+                      <!-- 5th row -->
+                      <div class="row form-group">
+                        <div class="col-sm-12">
+                          <button class="btn btn-success form-control">Gem/Start timer</button>
+                        </div>
+                      </div>
+
+                    </form>
+                  </div>
+                </td>
+              </tr>
               <!--table row 1: time registration view-->
               <tr>
                 <td colspan="7">
@@ -354,30 +475,44 @@
         </div>
       </div>
     </div>
+  </div>
+  <footer class="container-fluid">
+    <p>Footer Text</p>
+  </footer>
 
-    <footer class="container-fluid">
-      <p>Footer Text</p>
-    </footer>
+  <!-- pupover-->
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="popover"]').popover();
+    });
 
-    <!-- pupover-->
-    <script>
-      $(document).ready(function () {
-        $('[data-toggle="popover"]').popover();
+    $(function () {
+      $('[rel="popover"]').popover({
+        container: 'body',
+        html: true,
+        content: function () {
+          var clone = $($(this).data('popover-content')).clone(true).removeClass('hide');
+          return clone;
+        }
+      }).click(function (e) {
+        e.preventDefault();
       });
+    });
+  </script>
 
-      $(function () {
-        $('[rel="popover"]').popover({
-          container: 'body',
-          html: true,
-          content: function () {
-            var clone = $($(this).data('popover-content')).clone(true).removeClass('hide');
-            return clone;
-          }
-        }).click(function (e) {
-          e.preventDefault();
-        });
+  <!-- slide button toggle-->
+  <script>
+    $(function () {
+      $('#toggle-two').bootstrapToggle({
+        on: 'Fakturerbar',
+        off: 'Ikke fakturerbar',
+        onstyle: 'success',
+        offstyle: 'danger',
+        size: 'normal',
+        width: 170
       });
-    </script>
+    })
+  </script>
 
 </body>
 
