--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </button>
 
         <a class="navbar-brand" href="#">
-        <img id="logo" alt="Brand" src="../pics/alpha-logo.png">
+        <img id="logo" alt="Brand" src="./pics/alpha-logo.png">
       </a>
       </div>
 
