--- a/calendar_final.html
+++ b/calendar_final.html
@@ -65,7 +65,7 @@
       </button>
 
         <a class="navbar-brand" href="#">
-        <img id="logo" alt="Brand" src="alpha-logo.png">
+        <img id="logo" alt="Brand" src="./pics/alpha-logo.png">
       </a>
       </div>
 
