--- a/moduler/Faktura/template.html
+++ b/moduler/Faktura/template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="grid">
-		<div>
+		<div class="header">
 			Culpa consequat laboris amet eiusmod nisi excepteur ea eu incididunt adipisicing labore voluptate dolor in.
 			Enim elit culpa nostrud aliquip ea duis in et proident. Lorem ipsum nostrud proident aliqua culpa laboris irure anim aute et occaecat est mollit. Lorem ipsum et aute ut ad dolor quis ut dolor sint do consequat veniam pariatur labore. Veniam amet non exercitation in cupidatat in minim aliquip culpa consectetur incididunt proident aliqua sunt cupidatat.
 		</div>
@@ -18,8 +18,16 @@
 		<div>
 			Ex minim cupidatat quis id esse labore officia sint nulla qui excepteur sit sint dolore. Sint anim incididunt reprehenderit labore pariatur dolore incididunt non culpa dolore consequat in sunt laborum dolore eu ut eiusmod. Deserunt officia cillum ut non nulla duis sed do aliqua. Lorem ipsum sit esse exercitation nisi nulla quis veniam incididunt in voluptate sit magna nisi aute incididunt in laborum nisi. Cupidatat ex aliquip aute in dolor ad ut sit nulla culpa commodo excepteur anim est.
 		</div>
-		<div>
-			Consectetur fugiat fugiat ad in in anim do cillum exercitation dolore dExercitation excepteur enim do in duis id id nisi commodo ea ea qui. Duis reprehenderit nisi sunt velit est occaecat consequat aute est cillum aliquip fugiat velit et esse. Lorem ipsum quis velit in do amet sunt quis dolore reprehenderit reprehenderit ad id dolor sed consectetur laborum. Amet laborum laborum sint mollit ut mollit sed est dolor aute eiusmod qui ex adipisicing amet sint exercitation.o ut cupidatat sunt.
+		<div class="subgrid">
+			<div>			
+				Consectetur fugiat fugiat ad in in anim do cillum exercitation dolore dExercitation excepteur enim do in duis id id nisi commodo ea ea qui. Duis reprehenderit nisi sunt velit est occaecat consequat aute est cillum aliquip fugiat velit et esse. Lorem ipsum quis velit in do amet sunt quis dolore reprehenderit reprehenderit ad id dolor sed consectetur laborum. Amet laborum laborum sint mollit ut mollit sed est dolor aute eiusmod qui ex adipisicing amet sint exercitation.o ut cupidatat sunt.
+			</div>
+			<div>
+				Lorem ipsum ea anim voluptate nulla amet eu eiusmod tempor pariatur nisi aliquip et eu eiusmod in tempor irure incididunt amet. Nostrud qui pariatur sed amet dolore excepteur proident dolor deserunt exercitation.
+			</div>
+			<div>
+				Ex id ut cupidatat duis dolor cupidatat sed mollit officia esse est aliquip aliqua deserunt est sed. Reprehenderit ut ut duis non non deserunt irure anim nulla labore anim irure. Dolor pariatur reprehenderit enim irure consequat velit dolor ut consectetur elit proident voluptate et ex eu.
+			</div>
 		</div>
 	</div>
 </body>
