--- a/moduler/Faktura/template.html
+++ b/moduler/Faktura/template.html
@@ -8,25 +8,28 @@
 </head>
 <body>
 	<div class="grid">
-		<div class="header">
+		<div class="Kunde">
 			Culpa consequat laboris amet eiusmod nisi excepteur ea eu incididunt adipisicing labore voluptate dolor in.
 			Enim elit culpa nostrud aliquip ea duis in et proident. Lorem ipsum nostrud proident aliqua culpa laboris irure anim aute et occaecat est mollit. Lorem ipsum et aute ut ad dolor quis ut dolor sint do consequat veniam pariatur labore. Veniam amet non exercitation in cupidatat in minim aliquip culpa consectetur incididunt proident aliqua sunt cupidatat.
 		</div>
-		<div>
+		<div class="timer">
 			Proident sint laboris dolore commodo cilluSint est incididunt ut aliquip excepteur velit deserunt reprehenderit id id ut mollit. Do dolore duis velit in tempor est nulla magna id duis occaecat laboris amet fugiat laborum. Officia in do elit consectetur do sed laborum voluptate sunt veniam exercitation exercitation anim in. Aliquip aliquip non voluptate minim ut adipisicing aute sit nulla in qui.m consequat tempor ex irure anim est.
 		</div>
-		<div>
+		<div class="udgifter">
 			Ex minim cupidatat quis id esse labore officia sint nulla qui excepteur sit sint dolore. Sint anim incididunt reprehenderit labore pariatur dolore incididunt non culpa dolore consequat in sunt laborum dolore eu ut eiusmod. Deserunt officia cillum ut non nulla duis sed do aliqua. Lorem ipsum sit esse exercitation nisi nulla quis veniam incididunt in voluptate sit magna nisi aute incididunt in laborum nisi. Cupidatat ex aliquip aute in dolor ad ut sit nulla culpa commodo excepteur anim est.
 		</div>
-		<div class="subgrid">
-			<div>			
+		<div class="indhold subgrid">
+			<div class="header">			
 				Consectetur fugiat fugiat ad in in anim do cillum exercitation dolore dExercitation excepteur enim do in duis id id nisi commodo ea ea qui. Duis reprehenderit nisi sunt velit est occaecat consequat aute est cillum aliquip fugiat velit et esse. Lorem ipsum quis velit in do amet sunt quis dolore reprehenderit reprehenderit ad id dolor sed consectetur laborum. Amet laborum laborum sint mollit ut mollit sed est dolor aute eiusmod qui ex adipisicing amet sint exercitation.o ut cupidatat sunt.
 			</div>
-			<div>
+			<div class="header">
 				Lorem ipsum ea anim voluptate nulla amet eu eiusmod tempor pariatur nisi aliquip et eu eiusmod in tempor irure incididunt amet. Nostrud qui pariatur sed amet dolore excepteur proident dolor deserunt exercitation.
 			</div>
-			<div>
+			<div class="linier">
 				Ex id ut cupidatat duis dolor cupidatat sed mollit officia esse est aliquip aliqua deserunt est sed. Reprehenderit ut ut duis non non deserunt irure anim nulla labore anim irure. Dolor pariatur reprehenderit enim irure consequat velit dolor ut consectetur elit proident voluptate et ex eu.
+			</div>
+			<div class="note">
+				Lorem ipsum nisi aliqua laborum officia ullamco occaecat in quis ex elit dolore id magna in esse sint ut consectetur. Culpa excepteur ex culpa duis ex amet ut in fugiat magna id occaecat dolor mollit deserunt. Anim nulla et consequat sunt quis minim incididunt occaecat laborum. Consequat nisi dolore aliqua quis ex ut esse qui amet ad ut in sunt velit commodo nostrud pariatur.
 			</div>
 		</div>
 	</div>
