start implementing lasses customer in template NOT FINNISH

--- a/moduler/Faktura/template.html
+++ b/moduler/Faktura/template.html
@@ -22,8 +22,13 @@
 		<div class="nav">
 			Nav
 		</div>
-		<div class="kunde">
-			Kunde
+
+		<!--Customer-->
+		<div class="customer">
+			<div id=""></div>
+			<div id=""></div>
+			<div id=""></div>
+			<div id=""></div>
 		</div>
 
 		<!--Hours-->
