--- a/moduler/Faktura/faktura_lines.html
+++ b/moduler/Faktura/faktura_lines.html
@@ -17,49 +17,62 @@
 <body>
     <div class="grid">
         <div class="invoice-lines">
-        <div class="lines lines-header">
-            <div class="item-type">Vare Type</div>
-            <div class="descr">Beskrivelse</div>
-            <div class="amount">Antal</div>
-            <div class="unit-price">Enhedspris</div>
-            <div class="total">Total</div>
-        </div>
-        <hr>
-        <div class="lines">
-            <div class="form-group">
-                <select class="form-control btn-size">
-                    <option>Ydelse</option>
-                    <option>Vare</option>                        
-                </select>
+            <div class="lines lines-header">
+                <div class="item-type">Vare Type</div>
+                <div class="descr">Beskrivelse</div>
+                <div class="amount">Antal</div>
+                <div class="unit-price">Enhedspris</div>
+                <div class="total">Total</div>
             </div>
-            <textarea class="form-control">test</textarea>
-            <input type="number" class="form-control input-size" value="1">
-            <input type="number" class="form-control input-size" value="1500">
-            <input type="number" class="form-control input-size" value="1500">
-        </div>
-        <hr>
-        <div class="lines">
-            <div class="form-group">
-                <select class="form-control btn-size">
-                    <option>Ydelse</option>
-                    <option>Vare</option>                        
-                </select>
+            <hr>
+            <div class="lines">
+                <div class="form-group">
+                    <select class="form-control btn-size">
+                        <option>Ydelse</option>
+                        <option>Vare</option>                        
+                    </select>
+                </div>
+                <textarea class="form-control">test</textarea>
+                <input type="number" class="form-control input-size require-comment" value="1">
+                <input type="number" class="form-control input-size require-comment" value="1500">
+                <input type="number" class="form-control input-size require-comment" value="1500">
             </div>
-            <textarea class="form-control">test</textarea>
-            <input type="number" class="form-control input-size" value="1">
-            <input type="number" class="form-control input-size" value="1300">
-            <input type="number" class="form-control input-size" value="1000">
+            <hr>
+            <div class="lines">
+                <div class="form-group">
+                    <select class="form-control btn-size">
+                        <option>Ydelse</option>
+                        <option>Vare</option>                        
+                    </select>
+                </div>
+                <textarea class="form-control">test</textarea>
+                <input type="number" class="form-control input-size require-comment" value="1">
+                <input type="number" class="form-control input-size require-comment" value="1300">
+                <input type="number" class="form-control input-size require-comment" value="1000">
+            </div>
+            <hr>
         </div>
-        <hr>
-        </div>
-         <button class="btn-add btn-add-size">tilføj</button>
+        <button class="btn btn-add btn-add-size">tilføj</button>
+        <div class="price-comment hidden">    
+            <label for="comment">Kommentar til pris ændringer: </label>
+            <textarea rows="6" class="form-control comment" required></textarea>
+            <button class="hide-require btn">Gem</button>     
+        </div>        
     </div>
-   
+
 </body>
 <script>
     $('.btn-add').click(function() {
         $(".invoice-lines").append('<div class="lines"><div class="form-group"><select class="form-control btn-size"><option>Ydelse</option><option>Vare</option></select></div><textarea class="form-control"></textarea><input type="number" class="form-control input-size"><input type="number" class="form-control input-size"><input type="number" class="form-control input-size"></div><hr>');
     });
+
+    $('.require-comment').on('input', function(){
+        $(".price-comment").removeClass('hidden');
+    });
+
+    $(".hide-require").click(function(){
+        $(".price-comment").addClass('hidden');
+    })
 
 </script>
 
