Adjustments from meeting

--- a/moduler/Faktura/faktura_lines.html
+++ b/moduler/Faktura/faktura_lines.html
@@ -22,6 +22,8 @@
                 <div class="descr">Beskrivelse</div>
                 <div class="amount">Antal</div>
                 <div class="unit-price">Enhedspris</div>
+                <div class="discount">Rabat</div>
+                <div class="vat">Moms</div>
                 <div class="total">Total</div>
             </div>
             <hr>
@@ -52,6 +54,7 @@
             </div>
             <hr>
         </div>
+        
         <button class="btn btn-add btn-add-size">tilføj</button>
         <div class="price-comment hidden">    
             <label for="comment">Kommentar til pris ændringer: </label>
