--- a/moduler/Faktura/template.html
+++ b/moduler/Faktura/template.html
@@ -34,13 +34,13 @@
 			<div id="cust_1r2c">
 				<div class="btn-style">
 					<select id="cust-select" class="selectpicker form-control" data-style="btn-default" data-live-search="true" title="Søg: Kunde">
-					<option class="show-project-collapse">Ikea</option>
-					<option class="hide-project-collapse">Toys `r us</option>
-					<option class="hide-project-collapse">Tivoli</option>
-					<option class="hide-project-collapse">Nordisk Film Biografer</option>
-					<option class="hide-project-collapse">Bakken</option>
-					<option class="hide-project-collapse">Christiansborg</option>
-				</select>
+						<option class="show-project-collapse">Ikea</option>
+						<option class="hide-project-collapse">Toys `r us</option>
+						<option class="hide-project-collapse">Tivoli</option>
+						<option class="hide-project-collapse">Nordisk Film Biografer</option>
+						<option class="hide-project-collapse">Bakken</option>
+						<option class="hide-project-collapse">Christiansborg</option>
+					</select>
 				</div>
 			</div>
 			<!--Second row-->
@@ -85,12 +85,12 @@
 					<button class="btn btn-default btn-text show-collapse btnClicked">
 						Inkludér ikke-faktureret fakturerbarer timer fra: 
 						<select id="periodSelect" class="selectpicker" data-style="btn-default btn-xs" data-width="30%" >
-                            <option value="month">Denne måned</option>
-                            <option value="lastMonth">Sidste måned</option>
-                            <option value="quater">Dette kvartal</option>
-                            <option value="lasQuater">Sidste kvartal</option>
-                            <option value="custom">Brugerdefineret</option>
-                        </select>
+							<option value="month">Denne måned</option>
+							<option value="lastMonth">Sidste måned</option>
+							<option value="quater">Dette kvartal</option>
+							<option value="lasQuater">Sidste kvartal</option>
+							<option value="custom">Brugerdefineret</option>
+						</select>
 						<checkicon class="pull-right btn-check"></checkicon>
 					</button>
 
@@ -112,11 +112,11 @@
 
 			<div id="invTypeOpt" class="btn-group">
 				<select class="js-example-basic-multiple" multiple="multiple" data-width="70%">
-                    <option>Projekt</option>
-                    <option>Medarbejder</option>
-                    <option>Task</option>
-                    <option>Label</option>
-                </select>
+					<option>Projekt</option>
+					<option>Medarbejder</option>
+					<option>Task</option>
+					<option>Label</option>
+				</select>
 			</div>
 		</div>
 
@@ -124,7 +124,6 @@
 
 
 		<div class="indhold subgrid">
-			Indhold
 			<div class="header">
 				<div class="info">
 					<div class="addess-template">
@@ -137,13 +136,13 @@
 
 				<div class="po-date">
 					<div>
-						<input type="text" class="form-control" placeholder="po-number">
+						<input type="text" class="form-control form-control-header" placeholder="po-number">
 					</div>
 					<div>
-						<input type="date" class="form-control" placeholder="issue-date">
+						<input type="date" class="form-control form-control-header" placeholder="issue-date">
 					</div>
 					<div>
-						<select class="selectpicker show-tick" title="Betalingsbetingelser">
+						<select class="selectpicker select-size show-tick form-control-header" title="Betalingsbetingelser">
 							<option>15 Dage</option>
 							<option>60 Dage</option>
 							<option>90 Dage</option>
@@ -168,12 +167,12 @@
 					</div>
 					<hr>
 					<div class="lines">
-						<button class="require-comment-delete">X</button>
+						<button class="btn glyphicon glyphicon-minus require-comment-delete"></button>
 						<div class="form-group">
 							<select class="form-control btn-size">
-                        <option>Ydelse</option>
-                        <option>Vare</option>                        
-                    </select>
+								<option>Ydelse</option>
+								<option>Vare</option>                        
+							</select>
 						</div>
 						<textarea class="form-control">test</textarea>
 						<input type="number" class="form-control input-size require-comment" value="1">
@@ -189,12 +188,12 @@
 					</div>
 					<hr>
 					<div class="lines lines-delete">
-						<button class="require-comment-delete">X</button>
+						<button class="btn require-comment-delete glyphicon glyphicon-minus"></button>
 						<div class="form-group">
 							<select class="form-control btn-size">
-                        <option>Ydelse</option>
-                        <option>Vare</option>                        
-                    </select>
+								<option>Ydelse</option>
+								<option>Vare</option>                        
+							</select>
 						</div>
 						<textarea class="form-control">test</textarea>
 						<input type="number" class="form-control input-size require-comment" value="1">
@@ -206,7 +205,8 @@
 					<div class="delete-comment hidden">
 						<label for="comment">Kommentar til pris ændringer: </label>
 						<textarea rows="6" class="form-control comment" required></textarea>
-						<button class="hide-require-delete btn">Slet linje</button>
+						<button class="btn hide-require-cancel">Fortryd</button>
+						<button class="btn hide-require-delete">Slet linje</button>
 					</div>
 					<hr>
 				</div>
@@ -223,7 +223,12 @@
 				<div class="note">
 					<label for="note">Notes: </label>
 					<textarea class="form-control" rows="5" id="note"></textarea>
-				</div>
+				</div>				
+			</div>
+			<div class="btn-confirm">
+				<button class="btn btn-add-size">Gem kladde</button>
+				<button class="btn btn-add-size">Udkast</button>
+				<button class="btn btn-add-size">Send faktura</button>
 			</div>
 		</div>
 		<div class="footer">
@@ -332,6 +337,10 @@
 		$(".delete-comment").addClass('hidden');
 		$(".lines-delete").addClass('hidden');
 	})
+
+	$(".hide-require-cancel").click(function () {
+		$(".delete-comment").addClass('hidden');
+	});
 
 </script>
 
